force-app/main/default/objects/proh__File__c/proh__File__c.object-meta.xml
<CustomObject>
    <label>PaymentHub File</label>
    <nameField>
        <displayFormat>FL-{0}</displayFormat>
        <label>PaymentHub File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PaymentHub Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>