force-app/main/default/objects/proh__File__c/fields/proh__Narrative__c.field-meta.xml
<CustomField>
    <fullName>proh__Narrative__c</fullName>
    <label>Narrative</label>
    <type>TextArea</type>
</CustomField>