force-app/main/default/objects/proh__File__c/fields/proh__Parent__c.field-meta.xml
<CustomField>
    <fullName>proh__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>proh__File__c</referenceTo>
    <relationshipLabel>PaymentHub Files</relationshipLabel>
    <relationshipName>PaymentHub_Files</relationshipName>
    <type>Lookup</type>
</CustomField>