force-app/main/default/objects/proh__File__c/fields/proh__Total_Record_Amount__c.field-meta.xml
<CustomField>
    <fullName>proh__Total_Record_Amount__c</fullName>
    <description>Total record amount of the file.</description>
    <inlineHelpText>Total record amount of the file.</inlineHelpText>
    <label>Total Record Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>