force-app/main/default/objects/proh__File__c/fields/proh__Unique_File_Reference__c.field-meta.xml
<CustomField>
    <fullName>proh__Unique_File_Reference__c</fullName>
    <label>Unique File Reference</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>